@@ -311,6 +311,10 @@ CODE_FRAGMENT
 .	   "near" the GP.  *}
 .#define SEC_SHORT 0x2000000
 .
+. 	{* This section contains data which may be shared with other
+.	   executables or shared objects.  *}
+.#define SEC_SHARED 0x4000000
+.
 .	{*  End of section flags.  *}
 .
 .	{* Some internal packed boolean fields.  *}
